--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "20.1"
 
 loans:
-  message: "Welcome to EazyBank loans related QA APIs "
+  message: "Welcome the loans related QA APIs "
   contactDetails:
     name: "Grover Puneet - QA Lead"
     email: "file@eazybank.com"
