--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to the loans related QA APIs "
   contactDetails:
-    name: "Grover Ankit - QA Lead"
+    name: "Chaddha Ankit - QA Lead"
     email: "grover@eazybank.com"
   onCallSupport:
     - (8020) 875-4367
