--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -1,11 +1,11 @@
 build:
-version: "30.1"
+  version: "2.0"
 
 cards:
-  message: "Welcome to EazyBank cards related QA APIs "
+  message: "Welcome to EazyBank cards related QA APIs"
   contactDetails:
-    name: "Grover Pankaj - QA Lead"
-    email: "file@eazybank.com"
+    name: "saudnya- QA Lead"
+    email: "saudnya@eazybank.com"
   onCallSupport:
-    - (8030) 875-4367
-    - (8030) 236-1267
+    - (+91) 9876543210
+    - (+91) 9988776655
