--- a/loans.yml
+++ b/loans.yml
@@ -1,11 +1,11 @@
 build:
-  version: "20.0"
+  version: "3.0"
 
 loans:
-  message: "Welcome to EazyBank loans related default APIs "
+  message: "Welcome to EazyBank loans related local APIs"
   contactDetails:
-    name: "Pandey Mangal - Developer"
-    email: "file@eazybank.com"
+    name: "Abhay-Developer"
+    email: "abhay@eazybank.com"
   onCallSupport:
-    - (8020) 419-3491
-    - (8020) 382-1932
+    - (+91) 9876543210
+    - (+91) 9988776655
