--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related production APIs: Rabbit Listening"
+  message: "Welcome to EazyBank loans related production APIs: Webhooks"
   contactDetails:
     name: "Suraj-Project Manager"
     email: "suraj@eazybank.com"
